# utext

./: .gitignore  CMakeLists.txt  README.md  build.sh  utext
app/: CMakeLists.txt  main.cpp
app/res/: qmain.qss  resources.qrc
app/res/qss/: Default.qss
app/res/settings/: settingsUtext.ini
app/src/: CMakeLists.txt  Connecter.cpp  Connecter.h  cpphighligher.cpp  cpphighligher.h  editorlayout.cpp  editorlayout.h  emptywidget.cpp  emptywidget.h  highligher.cpp  highligher.h  htmlhighlighter.cpp  htmlhighlighter.h  logger.cpp  logger.h  mainwindow.cpp  mainwindow.h  mainwindow.ui  preferences.cpp  preferences.h  preferences.ui  projectview.cpp  projectview.h  replace.cpp  replace.h  rope.cpp  rope_node.cpp  search.cpp  search.h  settings.cpp  settings.h  settingsUtext.cpp  settingsUtext.h  tabchanger.cpp  tabchanger.h  texteditor.cpp  texteditor.h  treeviewcontextdialog.cpp  treeviewcontextdialog.h  treeviewcontextdialog.ui
res/settings/: settingsUtext.ini
